smb: make all qmin and qmax explicitly typed off_t

also explicitly set the min/max constexprs to off_t explicitly.
this should now make all related calls act exclusively on concretely typed
off_ts and as a result build on all platforms with all compilers 🤞

BUG: 419702